fix small issue of desktop auction countdown left padding and mobile time countdown overflow

--- a/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
@@ -56,7 +56,7 @@ h4 {
 }
 
 .auctionTimerCol {
-  padding-left: 0.5rem;
+  padding-left: 3rem;
 }
 
 .section h4 {
